Sync community from enterprise (c677328258cc8d20950da366471edd03e4684769)